opam-version: "2.0"
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/eqaf"
bug-reports:  "https://github.com/mirage/eqaf/issues"
dev-repo:     "git+https://github.com/mirage/eqaf.git"
doc:          "https://mirage.github.io/eqaf/"
license:      "MIT"
synopsis:     "Constant-time equal function on string"
description: """
This package provides an equal function on string in constant-time to avoid timing-attack with crypto stuff.
"""

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.0"}
  "cstruct" {>= "4.0.0"}
  "eqaf-bigstring" {= version}
]
