(library
 (name eqaf)
 (public_name eqaf)
 (modules eqaf))

(library
 (name eqaf_bigstring)
 (optional)
 (public_name eqaf.bigstring)
 (modules eqaf_bigstring)
 (libraries bigarray))

(library
 (name eqaf_cstruct)
 (optional)
 (public_name eqaf.cstruct)
 (modules eqaf_cstruct)
 (libraries cstruct eqaf.bigstring))