(executable
 (name test)
 (modules test)
 (libraries alcotest eqaf))

(alias
 (name runtest)
 (deps (:test test.exe))
 (action (run %{test} --color=always)))

(executable
 (name test_branch)
 (modules test_branch)
 (link_deps asm_sleep.o)
 (ocamlopt_flags (:standard) test/asm_sleep.o)
 (libraries clock unix eqaf))

(rule
 (targets asm_sleep.o)
 (deps asm_sleep.S build.sh)
 (action (bash "bash build.sh")))

(alias
 (name runtest)
 (deps (:test test_branch.exe))
 (action (run %{test})))
